src/css/base.scss
/* ... */
textarea:-moz-placeholder {
    color: var(--N400);
}

textarea::-moz-placeholder {
    color: var(--N400);
}

textarea:-ms-input-placeholder {
    color: var(--N400);
}

textarea::placeholder {
    color: var(--N400);
}

.dc__italic-font-style {
    font-style: italic !important;
}

.dc__align-reload-center {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.dc__skip-align-reload-center {
    position: unset;
    top: 0;
    left: 0;
    transform: none;
}

.dc__truncate {
    overflow: hidden;
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    word-break: break-all;
}

// opacity
.dc__opacity-0_5 {
    opacity: 0.5;
}

// blur
.dc__blur-1_5 {
    filter: blur(1.5px);
}

.dc__hover-n50:hover,
.dc__bg-n50 {
    background-color: var(--N50);
}

.dc__bg-g5 {
    background-color: var(--G500) !important;
}

.dc__hover-b500:hover {
    background-color: var(--B500);
}

.dc__hover-color-b500:hover {
    color: var(--B500);
}

.dc__hover-n100:hover {
    background-color: var(--N100);
}

.dc__hover-r100:hover {
    background-color: var(--R100);
}

.dc__hover-r500:hover {
    background-color: var(--R500);
}

.dc__hover-cn1:hover {
    color: var(--N100);
}

.dc__user-select-none {
    user-select: none;
}

.dc__stroke-width-4 {
    path {
        stroke-width: 4px;
    }
}

.dc__beta-feat-nav {
    &:not(.active-nav) {
        .svg-container {
            position: relative;

            &::after {
                content: '';
                width: 12px;
                height: 12px;
                background: var(--Y500);
                position: absolute;
                border-radius: 50%;
                top: 6px;
                right: 6px;
                border: 2px solid var(--B500);
            }
        }
    }

    .expandable-active-nav {
        .title-container {
            &::after {
                content: '(Beta)';
                margin-left: 4px;
            }
        }
    }
}

.radio-group-no-border {
    border: none !important;
    display: inline-block !important;

    .form__radio-item {
        border: none;
        min-width: 110px;

        .form__radio-item-content {
            padding: 0 15px 0 0;

            .radio__title {
                text-transform: none;
            }
        }
    }
}

.dc__divider {
    width: 1px;
    min-height: 16px;
    background-color: var(--N200);
}

.dc__required-field::after {
    content: ' *';
    color: var(--R500);
}

.dc__highlight-text {
    mark {
        padding: 0;
        background-color: var(--Y300) !important;
        font-weight: 600;
    }
}

.dc__description-textarea {
    width: 100% !important;
    min-height: 90px;
    padding: 8px;
    border: 1px solid #ccc;
    border-radius: 4px;
    font-size: 14px;
    line-height: 20px;
    color: #333;
}

.dc__outline-none-imp {
    outline: none !important;
}

.dc__icon-bg-color {
    background-color: #dff3f7;
}

.dc__list-style-disc {
    list-style-type: disc;
}

.dc__list-style-none {
    list-style-type: none;
}

.alphabet-icon__initial {
    font-weight: 500;
    text-transform: uppercase;
    line-height: 1.9;
    text-align: center;
    border-radius: 50%;
    color: var(--N000);
    user-select: none;
    border: solid 1px transparent;
}

.dc__zi-4 {
    z-index: 4;
}

.dc__zi-20 {
    z-index: 20;
}

.show-shimmer-loading {
    .child-shimmer-loading {
        animation-duration: 2s;
        animation-fill-mode: forwards;
        animation-iteration-count: infinite;
        animation-name: shimmer-loading;
        animation-timing-function: linear;
        background: linear-gradient(90deg, #edf1f5 30%, #ffffff 60%, #edf1f5 100%);
        background-size: 800px 104px;
        position: relative;
        height: 16px;
        border-radius: 2px;
        margin-top: 4px;
    }
}

.shimmer-loading {
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: shimmer-loading;
    animation-timing-function: linear;
    background: linear-gradient(90deg, #edf1f5 30%, #ffffff 60%, #edf1f5 100%);
    background-size: 800px 104px;
    position: relative;
}

@keyframes shimmer-loading {
    0% {
        background-position: -800px 0;
    }

    100% {
        background-position: 800px 0;
    }
}

.dc__place-abs-shimmer-center {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translate(0, -50%);
    width: 85%;
}

.full-height-width {
    height: 100vh;
    width: 100vw;
}

.dc__badge {
    background-color: var(--N100);
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    line-height: 18px;
    letter-spacing: normal;
    text-align: center;
    color: var(--N700);
    padding: 0px 6px;
    border-radius: 50%;
}

.dc__edit_button {
    height: 36px;
    font-size: 12px;
    font-weight: 600;
    padding: 0 16px;
    border-radius: 4px;
    text-decoration: none;
    outline: none;
    min-width: 64px;
    text-transform: capitalize;
    line-height: 36px;
    text-align: center;
    background: #fff;
    color: var(--B500);
    border: 1px solid #bbb;
    cursor: pointer;

    &:hover {
        background: #eee;
        color: var(--B700);
    }
}

.line_separator {
    width: 1px;
    height: 16px;
    background: var(--terminal-bg);
}

.flex-wrap {
    flex-wrap: wrap;
}

.dc__dashed_icon_grid-container {
    display: grid;
    grid-template-columns: 48% 4% 48%;
    padding-left: 20px;
    padding-right: 20px;
    gap: 0;
    width: 100%;
}

.dc__dotted-line {
    border: none;
    border-top: 1px dashed var(--N300);
    margin: 10px 0;
}

.tag-class {
    .action-icon {
        display: none;
    }
    &.icon-hover {
        &:hover {
            .show-icon {
                display: block;
            }
        }
    }
}
/* ... */

